# applicative-bool

./: applicative-bool.cabal
Control/Applicative/: Bool.hs
